# old_opengl_rasterizer

./: CMakeLists.txt  README.md  camera.h  glad.c  main.cpp  mesh.h  model.h  shader.h  stb_image.cpp
include/glad/: glad.c  glad.h
include/glm/: CMakeLists.txt
